# academic-research-intelligence

./: .gitignore  README.md  academic_research_system_prompt.md  knowledgebase.md  related_solutions.md  review_report.md
docs/: index.html
mvp/: BACKLOG.md  README.md  pyproject.toml
mvp/config/: default.yaml
mvp/experiments/: results.md
mvp/src/paperwatch/: __init__.py  cli.py  config.py  gates.py  ingest_arxiv.py  ingest_openalex.py  models.py  normalize.py  ranking.py  report_weekly.py  retractions.py  scoring.py  venues.py
mvp/tests/: test_core.py
