[project]
name = "paperwatch"
version = "0.1.0"
description = "Academic research intelligence MVP skeleton"
requires-python = ">=3.10"
dependencies = ["numpy", "scikit-learn", "pyyaml", "requests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
